<resources>
    <string name="app_name">RemindMe</string>
    <string name="action_settings">Settings</string>
    <string name="home_page">Retour à la home page</string>

    <!-- Types -->
    <string name="type_loan">Prêt</string>
    <string name="type_borrow">Emprunt</string>

    <!-- Categories -->
    <string name="categorie_0">Sans catégorie</string>
    <string name="categorie_1">Ajouter une catégorie</string>
    <string name="categorie_2">Vêtements</string>
    <string name="categorie_3">Films</string>
    <string name="categorie_4">Jeux</string>
    <string name="categorie_5">Livres</string>

    <!-- Base Contact -->
    <string name="select_contact_fname">Sélectionnez un contact</string>
    <string name="base_contact_fname">Ajouter un contact</string>
    <string name="base_contact_lname"></string>
    <string name="base_contact_phone">Add</string>
    <string name="base_contact_email">Add</string>

    <!-- Welcome Page -->
    <string name="title_activity_welcome">Bienvenue</string>
    <string name="skip">SUIVANT</string>
    <string name="start">C\'EST PARTI</string>

    <string name="fragment_1_title">Bienvenue!</string>
    <string name="fragment_1_desc">Bonjour, Bienvenue dans l\'application RemindMe! N\'oubliez plus la liste des choses que vous prêtez ou empruntez.</string>

    <string name="fragment_2_title">Simplicité</string>
    <string name="fragment_2_desc">Créez facilement des enregistrements de vos prêts ou emprunts, et ajouter leurs des rappels pour ne rien manquer.</string>

    <string name="fragment_3_title">Pilotage</string>
    <string name="fragment_3_desc">Suivez l\'activité de vos échanges au travers de graphiques dédiés.</string>

    <string name="fragment_4_title">Démarrage</string>
    <string name="fragment_4_desc">C\'est parti, commencez à utiliser l\'application.</string>

    <!-- Home Page -->
    <string name="title_activity_home_page">Home Page</string>
    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="title_drawer">Gérez vos échanges</string>
    <string name="action_settings_category">Catégories</string>
    <string name="home_loan_items">Mes prêts</string>
    <string name="home_borrowed_items">Mes emprunts</string>
    <string name="home_currency">€</string>
    <string name="home_objects">objets</string>
    <string name="home_item_creation_title">Création d\'un échange</string>
    <string name="home_item_creation">Que voulez-vous créer?</string>
    <string name="home_item_creation_object">Objet</string>
    <string name="home_item_creation_money">Argent</string>

    <!-- Navigation Drawer terms -->
    <string name="drawer_money_loan">Prêt d\'argent</string>
    <string name="drawer_money_borrow">Emprunt d\'argent</string>
    <string name="drawer_object_loan">Prêt d\'objet</string>
    <string name="drawer_object_borrow">Emprunt d\'objet</string>
    <string name="drawer_option">Options</string>
    <string name="drawer_stats">Statistiques</string>
    <string name="drawer_contact_us">Nous contacter</string>
    <string name="drawer_contact">Liste des contacts</string>
    <string name="drawer_category">Liste des catégories</string>

    <!-- MoneyList Page -->
    <string name="title_activity_money_loan">Prêts d\'argent</string>
    <string name="title_activity_money_borrow">Emprunts d\'argent</string>

    <!-- OjbectList Page -->
    <string name="title_activity_object_loan">Prêts d\'objets</string>
    <string name="title_activity_object_borrow">Emprunts d\'objets</string>

    <!-- Statistics Page -->
    <string name="title_activity_statistics">Statistiques</string>
    <string name="txtview_money_bar_chart">Echanges d\'argent</string>
    <string name="txtview_object_bar_chart">Echanges d\'objets</string>
    <string name="txtview_contact_bar_chart">Activité des contacts</string>

    <!-- Creation Pages -->
    <string name="incomplete_data">Données manquantes!</string>
    <string name="error_message">Vous devez renseigner tous les champs.</string>
    <string name="added_item">Votre saisie a bien été enregistrée.</string>
    <string name="updated_item">Votre enregistrement a été mis à jour.</string>
    <string name="spinner_type">Type</string>
    <string name="spinner_category">Catégorie</string>
    <string name="deletion_process">Demande de suppression!</string>
    <string name="deletion_warning">Souhaitez-vous réellement supprimer la sélection?</string>
    <string name="contact_deletion_process">Demande de suppression du contact!</string>
    <string name="contact_deletion_warning">Si vous supprimez le contact, tous les échanges qui lui sont rattachés seront supprimés, confirmer?</string>
    <string name="positive_answer">Oui</string>
    <string name="negative_answer">Non</string>
    <string name="deletion_confirmation">Votre élément a bien été supprimée</string>
    <string name="category_deletion_process">Demande de suppression de la catégorie!</string>
    <string name="category_deletion_warning">Si vous supprimez la catégorie, tous les échanges rattachés seront marqués \'sans catégorie\', confirmer?</string>

    <string name="hint_edittxt_crea_title">Intitulé</string>
    <string name="hint_spinner_crea_contact">Définir le contact</string>
    <string name="hint_edittxt_crea_amount">Montant</string>
    <string name="hint_edittxt_crea_qty">Quantité</string>
    <string name="hint_edittxt_crea_date">Date</string>
    <string name="hint_edittxt_crea_end_date">Date limite</string>
    <string name="hint_edittxt_crea_details">Détails</string>
    <string name="hint_urgent_chkbox">Urgent</string>

    <!-- Money Creation Page -->
    <string name="title_activity_money_creation">Echange d\'argent</string>

    <!-- Object Creation Page -->
    <string name="title_activity_object_creation">Echange d\'objet</string>

    <!-- Contact Creation Page -->
    <string name="title_activity_contact_creation">Créer un contact</string>
    <string name="hint_edittxt_contact_creation_fname">Prénom</string>
    <string name="hint_edittxt_contact_creation_lname">Nom</string>
    <string name="hint_edittxt_contact_creation_phone">Téléphone</string>
    <string name="hint_edittxt_contact_creation_email">Email</string>
    <string name="added_contact">Contact sauvegardé.</string>

    <!-- Contacts List Page -->
    <string name="title_activity_contact_list">Contacts</string>

    <!-- Lists Items -->
    <string name="txtview_detail_display">Détails</string>
    <string name="dialog_detail_title">Détails</string>

    <!-- Money List Item -->
    <string name="hint_txtview_money_title">Titre</string>
    <string name="hint_txtview_money_fname">Prénom</string>
    <string name="hint_txtview_money_lname">Nom</string>
    <string name="hint_txtview_money_amount">Montant</string>
    <string name="hint_txtview_money_date">Date</string>

    <!-- Object List Item -->
    <string name="hint_txtview_object_title">Titre</string>
    <string name="hint_txtview_object_fname">Prénom</string>
    <string name="hint_txtview_object_lname">Nom</string>
    <string name="hint_txtview_object_number">Montant</string>
    <string name="hint_txtview_object_date">Date</string>
    <string name="hint_txtview_object_category">Catégorie</string>

    <!-- Category Page -->
    <string name="title_activity_category">Catégories</string>
    <string name="txtview_category">Catégorie</string>
    <string name="txtview_laius_cat">Quantité totale des échanges de la catégorie</string>
    <string name="txtview_laius_cat_contact">Pour le contact :</string>

    <!-- Category List Page -->
    <string name="title_activity_category_list">Catégories</string>

    <!-- DATE PICKER DIALOG FRAGMENT -->
    <string name="error_dp_message">" must implement OnDatePickedListener"</string>
    <string name="btn_dp_validate">"Confirmer"</string>
    <string name="txt_dp_title">"Sélectionner la date"</string>

    <!-- Category Creation Page -->
    <string name="title_activity_category_creation">Ajout de Catégories</string>
    <string name="txtview_category_creation_title">Catégorie à ajouter</string>
    <string name="hint_edittxt_category_creation_title">Nom de la catégorie</string>
    <string name="added_category">Catégorie ajoutée.</string>

    <!-- Contact Exchange Activity -->
    <string name="title_activity_contact_exchange">Statut du contact</string>
    <string name="contact_details">Mes informations</string>
    <string name="edit_contact">Editer les informations</string>

    <!-- Statistics Page -->
    <string name="title_activity_statistics_new">Mes statistiques</string>
    <string name="empty_stats">Aucune donnée à afficher</string>
    <string name="january">Jan</string>
    <string name="february">Fev</string>
    <string name="march">Mars</string>
    <string name="april">Avr</string>
    <string name="may">Mai</string>
    <string name="june">Juin</string>
    <string name="july">Juil</string>
    <string name="august">Août</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Déc</string>
    <string name="money_bar_chart">Argent prêté et emprunté</string>
    <string name="object_bar_chart">Objets prêtés et empruntés</string>

    <!-- Object by Category Page -->
    <string name="title_activity_category_object_list">Echanges par catégorie</string>

    <!-- Filters -->
    <string name="filter_title">Filtres de la liste</string>
    <string name="amount_up">Montants croissants</string>
    <string name="amount_down">Montants décroissants</string>
    <string name="quantity_up">Quantités croissantes</string>
    <string name="quantity_down">Quantités décroissantes</string>
    <string name="date_up">Dates croissantes</string>
    <string name="date_down">Dates décroissantes</string>

    <!-- Reminders Page -->
    <string name="title_activity_reminders">Les rappels</string>
    <string name="urgent_reminder">Rappel urgent* :</string>
    <string name="urgent_reminder_days">jour(s)</string>
    <string name="urgent_reminder_detail">*Suite à la création de l\'échange, correspond au nombre de jours après lequel une alerte calendrier sera envoyée.</string>
    <string name="target_date">Date butoire* :</string>
    <string name="target_date_detail">*Il est possible de paramétrer jusqu\'à 2 rappels sur une date butoire. Chaque fois qu\'un échange sera créé, ces 2 rappels seront automatiquement ajoutés. </string>
    <string name="radio_no_reminder">0 rappel</string>
    <string name="radio_one_reminder">1 rappel</string>
    <string name="radio_two_reminders">2 rappels</string>
    <string name="reminders_saved">Vos préférences ont été sauvegardées.</string>
    <string name="urgent_wrong_entry">Le nombre de jour doit être compris entre 1 et 10. Pour une date ultérieure, utilisez la date butoire.</string>

</resources>
