<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_reminders"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.avescera.remindme.RemindersActivity"
    tools:showIn="@layout/activity_reminders"
    android:theme="@style/Theme.App.Base.ReminderCreation">

    <TextView
        android:text="@string/urgent_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtVUrgentReminder" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txtVUrgentReminder"
        android:id="@+id/editTxtUrgentReminderNmbr"
        android:textColorLink="@color/colorReminders" />

    <TextView
        android:text="@string/urgent_reminder_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewUrgentReminderDetail"
        android:layout_below="@+id/txtVUrgentReminder"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/target_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/txtVTargetDate"
        android:layout_below="@+id/txtViewUrgentReminderDetail"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/txtVTargetDate"
        android:layout_centerHorizontal="true"
        android:id="@+id/rGroupTargetDate">

        <android.support.v7.widget.AppCompatRadioButton
            android:text="@string/radio_no_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rButtonNoReminder" />

        <android.support.v7.widget.AppCompatRadioButton
            android:text="@string/radio_one_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rButtonOneReminder" />

        <android.support.v7.widget.AppCompatRadioButton
            android:text="@string/radio_two_reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rButtonTwoReminders" />

    </RadioGroup>

    <TextView
        android:text="@string/target_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView6"
        android:layout_below="@id/rGroupTargetDate" />

    <TextView
        android:text="@string/urgent_reminder_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/editTxtUrgentReminderNmbr"
        android:id="@+id/txtVUrgentReminderDays" />

</RelativeLayout>
