<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_object_exchange_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.avescera.remindme.ObjectCreationActivity"
    tools:showIn="@layout/activity_object_creation">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTxtObjectCreationTitle"
        android:hint="@string/hint_edittxt_crea_title" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/spinnerObjectCreationType"
        android:layout_below="@+id/editTxtObjectCreationTitle"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/spinnerObjectCreationType"
        android:layout_alignEnd="@+id/editTxtObjectCreationTitle"
        android:layout_marginTop="15dp"
        android:id="@+id/editTxtObjectCreationQty"
        android:hint="@string/hint_edittxt_crea_qty" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtObjectCreationQty"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/spinnerObjectCreationCateroy" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/spinnerObjectCreationContact"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/editTxtObjectCreationDate"
        android:hint="@string/hint_edittxt_crea_date" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/editTxtObjectCreationDate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/editTxtObjectCreationDetails"
        android:hint="@string/hint_edittxt_crea_details" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerObjectCreationContact"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/editTxtObjectCreationDetails"
        android:layout_alignParentStart="true"
        android:id="@+id/editTxtObjectTargetDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_alignBottom="@+id/editTxtObjectTargetDate"
        android:layout_alignParentStart="true"
        android:id="@+id/editTxtObjectCreationEndDate"
        android:hint="@string/hint_edittxt_crea_end_date" />

    <CheckBox
        android:text="@string/hint_urgent_chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkbxImportantObject"
        android:layout_alignBottom="@+id/editTxtObjectTargetDate"
        android:layout_toEndOf="@+id/editTxtObjectTargetDate" />
</RelativeLayout>
