<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_contact_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.avescera.remindme.ContactCreationActivity"
    tools:showIn="@layout/activity_contact_creation"
    android:theme="@style/Theme.App.Base.ContactCreation">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/edit_txt_contact_creation_first_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_edittxt_contact_creation_fname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/edit_txt_contact_creation_last_name"
        android:layout_below="@+id/edit_txt_contact_creation_first_name"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_edittxt_contact_creation_lname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/edit_txt_contact_creation_last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/edit_txt_contact_creation_phone"
        android:hint="@string/hint_edittxt_contact_creation_phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="31dp"
        android:id="@+id/edit_txt_contact_creation_email"
        android:layout_below="@+id/edit_txt_contact_creation_phone"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_edittxt_contact_creation_email" />
</RelativeLayout>
